## Commit: Refine role-based access and privilege validation; investigate Swagger 403 issue
### Summary
Refactored security and privilege handling across the application to align controller-level access rules with business privilege checks. The changes were made while troubleshooting persistent 403 “Access Denied” errors on Swagger endpoints.

### Details
- Updated **user privilege configuration** to allow the  role access to the  privilege as per business requirements.
- Implemented the **** method in  to enforce privilege-based access control using .
- Temporarily **commented out ** usage in  due to new integration test failures and 403 errors.
- Ensured both  and  adhere to consistent **business access rights logic**.
- Retained Spring Security’s role-based authorisation () in controllers while preparing for hybrid privilege validation.
- Attempted fixes for **Swagger UI endpoint (403 Forbidden)** access issues introduced after tightening security rules.
- Swagger endpoints previously worked when traders could view and access only their own trade summaries.

### Current Status
- Swagger endpoints () are still returning 403.
- Privilege enforcement logic in service layer is temporarily disabled pending further review.

### Next Steps
- Review  to whitelist Swagger endpoints (, ).
- Restore  logic after adjusting integration test context and authentication setup.
- Confirm that role and privilege mappings align with expected Spring Security authorities.